# esp-studio

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  THIRD_PARTY_LICENSES.md  VISION.md  package.json  pnpm-lock.yaml
.claude/rules/: ui.md
scripts/: fetch-binaries.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  versions.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AboutModal.tsx  Editor.tsx  ErrorBoundary.tsx  FileTree.tsx  NewProjectModal.tsx  SettingsModal.tsx  StatusBar.tsx  Toggle.tsx  Toolbar.tsx
src/lib/: api.ts  no-autocorrect.ts  settings.ts
