[package]
name = "esp-studio"
version = "0.1.0"
description = "ESPStudio — a hyper-simplified IDE for MicroPython on ESP32 / ESP8266"
authors = ["Gabriel Marcano"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "esp_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Binary named for the brand so macOS shows "ESPStudio" in dev too (the package
# stays `esp-studio`). Matches productName in tauri.conf.json.
[[bin]]
name = "ESPStudio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

